CHATS_SIT/force-app/main/default/objects/T_ADJMT__c.object
<CustomObject>
    <description>Adjustment parent table that contains information about provider and case payment corrections</description>
    <fields>
        <fullName>Recovery_Initiative__c</fullName>
        <label>Recovery Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Claim Established</fullName>
                </value>
                <value>
                    <fullName>Claim Established and IPV will be pursued</fullName>
                </value>
                <value>
                    <fullName>DA Referral</fullName>
                </value>
                <value>
                    <fullName>Settlement Agreement</fullName>
                </value>                
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outstanding_Recovery_Balance__c</fullName>
        <label>Outstanding Recovery Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMT_ADJMT__c</fullName>
        <formula>CASE(TEXT(CDE_AGNST_ADJMT__c), &apos;1&apos;, Adjustment_Details_Amount__c, &apos;2&apos;, Non_Adjustment_Details_Amount__c,Null )</formula>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjustment_Details_Amount__c</fullName>
        <description>Sum of Adjusted Amount on all Adjustment Details. This field is referred in AMT_ADJMT.</description>
        <label>Adjustment Details Amount</label>
        <summarizedField>T_ADJMT_DETAIL__c.AMT_DETAIL_ADJMT__c</summarizedField>
        <summaryForeignKey>T_ADJMT_DETAIL__c.IDN_ADJMT__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CDE_AGNST_ADJMT__c</fullName>
        <description>Adjustment Payment Type</description>
        <label>Adjustment Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00727</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>County</description>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Adjustment County</relationshipLabel>
        <relationshipName>Adjustment_County</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_REASON__c</fullName>
        <label>Adjustment Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00741</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS_ADJMT__c</fullName>
        <description>Adjustment Status</description>
        <label>Adjustment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00719</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_ADJMT__c</fullName>
        <description>Adjustment Type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00718</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_CLSFN__c</fullName>
        <description>Classification Type</description>
        <label>Classification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00730</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_DISCV_ADJMT_ORIG__c</fullName>
        <description>Original Discovery Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_ADJMT__c</fullName>
        <description>Care End Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Care End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_START_ADJMT__c</fullName>
        <description>Care Start Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Care Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case#</description>
        <label>Case#</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Adjustment</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IND_ORD_COURT_ADJMT__c</fullName>
        <description>Court Ordered Adjustment</description>
        <label>Court Ordered Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_REIMBSL_PMT__c</fullName>
        <formula>IF( ISPICKVAL(CDE_TYPE_ADJMT__c, &apos;2&apos;), &apos;Yes&apos;,IF( ISBLANK(Reimbursable_Legacy__c), 
IF( ABS((MONTH(DTE_START_ADJMT__c) + (12*(YEAR(DTE_START_ADJMT__c)-YEAR(DATEVALUE(CreatedDate)))) - MONTH(DATEVALUE(CreatedDate)))) &lt;= 3, &apos;Yes&apos;, &apos;No&apos;), Reimbursable_Legacy__c))</formula>
        <label>Reimbursable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Adjustment_Details_Amount__c</fullName>
        <description>Sum of Adjusted Amount on all Non Adjustment Details. This field is referred in AMT_ADJMT.</description>
        <label>Non Adjustment Details Amount</label>
        <summarizedField>T_NON_ADJMT_DETAIL__c.AMT_DETAIL_ADJMT__c</summarizedField>
        <summaryForeignKey>T_NON_ADJMT_DETAIL__c.IDN_ADJMT__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reimbursable_Legacy__c</fullName>
        <description>The field is used to store the value of IND_REIMBSL_PMT field for legacy records.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reimbursable Legacy</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_EDIT_REASON__c</fullName>
        <description>Project 353 | JIRA CCCAP-6051</description>
        <label>Reason for Edit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00855</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHK_CR206ForceTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project 353 | JIRA CCCAP-6051 | When true, CR206 is generated once and set it to false</description>
        <label>Force Trigger CR206</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTE_EFFV_RECOVERY__c</fullName>
        <description>Project 353 | JIRA CCCAP-6051 | Updated when Recovery is finalized for the first time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Recovery Effective Date</label>
        <type>Date</type>
    </fields>
<fields>
        <fullName>Cancel_Button_Access__c</fullName>
        <formula>AND(ISPICKVAL(CDE_TYPE_ADJMT__c, &apos;2&apos;),OR(ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;2&apos;),ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;5&apos;)), RecordType.DeveloperName = &apos;Finalized&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Button Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTE_CANCEL_ADJMT__c</fullName>
        <description>Date when adjustment cancellation is approved</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Recovery Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DTE_INIT_CANCEL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recovery Cancel Initiation Date</label>
        <type>DateTime</type>
    </fields>
    <label>Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IDN_CASE__c</columns>
        <columns>CDE_COUNTY__c</columns>
        <columns>CDE_REASON__c</columns>
        <columns>CDE_STATUS_ADJMT__c</columns>
        <columns>CDE_TYPE_ADJMT__c</columns>
        <columns>CDE_AGNST_ADJMT__c</columns>
        <columns>CDE_TYPE_CLSFN__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CDE_AGNST_ADJMT__c</columns>
        <columns>CDE_STATUS_ADJMT__c</columns>
        <columns>IDN_PROVR__c</columns>
        <columns>DTE_END_ADJMT__c</columns>
        <columns>AMT_ADJMT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDE_COUNTY__c</field>
            <operation>equals</operation>
            <value>Weld</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <recordTypes>
        <fullName>Finalized</fullName>
        <active>true</active>
        <label>Finalized</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Process</fullName>
        <active>true</active>
        <label>In Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Adjmnt_cannotBe_claim_if_case_isNotNull</fullName>
        <active>true</active>
        <description>Adjustment Type cannot be &apos;Claim&apos; when Case Id is not Null</description>
        <errorConditionFormula>AND( NOT(ISBLANK( IDN_CASE__r.Id )), TEXT(CDE_TYPE_ADJMT__c) = &apos;1&apos;,ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;) )</errorConditionFormula>
        <errorDisplayField>CDE_TYPE_ADJMT__c</errorDisplayField>
        <errorMessage>Adjustment Type cannot be &apos; Claim &apos;  with Case# entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CareEndDate_CareStartDate_SameMonth</fullName>
        <active>true</active>
        <description>Both Care Start Date and Care End Date must be in same Month</description>
        <errorConditionFormula>AND(
OR(
    (YEAR(DTE_START_ADJMT__c)&lt;&gt;YEAR(DTE_END_ADJMT__c)),
    (MONTH(DTE_START_ADJMT__c)&lt;&gt;MONTH(DTE_END_ADJMT__c))
),
AND(ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;),
OR(ISPICKVAL(CDE_TYPE_ADJMT__c, &apos;1&apos;),ISPICKVAL(CDE_TYPE_ADJMT__c, &apos;3&apos;))) 
)</errorConditionFormula>
        <errorMessage>Both the Care Start Date and the Care End Date must be in the same month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DTE_END_ADJMT_Validation</fullName>
        <active>true</active>
        <description>Care End Date Cannot be in Future.</description>
        <errorConditionFormula>DTE_END_ADJMT__c &gt;  TODAY()  &amp;&amp; ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;)</errorConditionFormula>
        <errorDisplayField>DTE_END_ADJMT__c</errorDisplayField>
        <errorMessage>The Care End Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DTE_Start_ADJMT_Validation</fullName>
        <active>true</active>
        <description>Care Start Date Cannot be in Future</description>
        <errorConditionFormula>DTE_START_ADJMT__c &gt; TODAY() &amp;&amp; ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;)</errorConditionFormula>
        <errorDisplayField>DTE_START_ADJMT__c</errorDisplayField>
        <errorMessage>The Care Start Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>careEndDate_Grtrthan_careStartDate</fullName>
        <active>true</active>
        <description>Care End Date must be greater than Care Begin Date</description>
        <errorConditionFormula>DTE_END_ADJMT__c &lt; DTE_START_ADJMT__c  &amp;&amp; ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;)</errorConditionFormula>
        <errorMessage>The Care End Date must be greater than the Care Begin Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>either_case_or_provr_must_be_entered</fullName>
        <active>true</active>
        <description>CHAT-525: one of IDN_PROVR or IDN_CASE must be entered</description>
        <errorConditionFormula>AND(  ISBLANK(IDN_CASE__c),
      ISBLANK(IDN_PROVR__c), 
      ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;) 
   )</errorConditionFormula>
        <errorMessage>Either Case or Provider must be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>either_case_or_provr_must_be_enteredNtbt</fullName>
        <active>true</active>
        <description>CHAT-525: one of IDN_PROVR or IDN_CASE must be entered. Not both</description>
        <errorConditionFormula>AND(
NOT(OR(  ISBLANK(IDN_CASE__c),
      ISBLANK(IDN_PROVR__c) 
   )),
   ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;) 
)</errorConditionFormula>
        <errorMessage>Either Case or Provider must be entered. Not both.</errorMessage>
    </validationRules>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Provider_License_Closed</fullName>
        <active>false</active>
        <description>On Closed Provier Adjustment of type Claim can not be created</description>
        <errorConditionFormula>AND(  TEXT(CDE_TYPE_ADJMT__c) = &apos;1&apos;,NOT(ISPICKVAL( IDN_PROVR__r.CDE_STATUS_PROVR__c , &apos;Open&apos;)),OR((TEXT( CDE_STATUS_ADJMT__c ) = &apos;&apos;),(TEXT(CDE_STATUS_ADJMT__c) = &apos;1&apos;)) )</errorConditionFormula>
        <errorMessage>Adjustment cannot be created for the care dates when provider license status is closed</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>OriginalDiscoveryDate_Required</fullName>
        <active>true</active>
        <description>Project 353 | JIRA CCCAP-6051</description>
        <errorConditionFormula>AND(
 ISNULL(DTE_DISCV_ADJMT_ORIG__c),
 ISPICKVAL(CDE_TYPE_ADJMT__c, &quot;2&quot;),
 OR(
  ISNEW(),
  ISCHANGED( CDE_COUNTY__c ),
  ISCHANGED( IDN_CASE__c ),
  ISCHANGED( IDN_PROVR__c ),
  ISCHANGED( CDE_AGNST_ADJMT__c ),
  ISCHANGED( CDE_TYPE_ADJMT__c ),
  ISCHANGED( DTE_START_ADJMT__c ),
  ISCHANGED( DTE_END_ADJMT__c )
 )
)</errorConditionFormula>
        <errorDisplayField>DTE_DISCV_ADJMT_ORIG__c</errorDisplayField>
        <errorMessage>Field is required when Adjustment Type is Recovery</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adjustment_Recover_Cancellation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(CDE_TYPE_ADJMT__c,&apos;2&apos;), 
        OR(
                        AND (
                                                    NOT(ISCHANGED(DTE_INIT_CANCEL__c)),
                                                                    ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;5&apos;)
                                                                ),
                                    AND (
                                                    NOT(ISCHANGED(DTE_CANCEL_ADJMT__c)),
                                                                    ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;6&apos;)
                                                                )
        )
    )</errorConditionFormula>
        <errorMessage>This record can not be updated due to cancellation.</errorMessage>
    </validationRules>
</CustomObject>