CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/validationRules/Adjmnt_cannotBe_claim_if_case_isNotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>Adjmnt_cannotBe_claim_if_case_isNotNull</fullName>
    <active>true</active>
    <description>Adjustment Type cannot be &apos;Claim&apos; when Case Id is not Null</description>
    <errorConditionFormula>AND( NOT(ISBLANK( IDN_CASE__r.Id )), TEXT(CDE_TYPE_ADJMT__c) = &apos;1&apos;,ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;) )</errorConditionFormula>
    <errorDisplayField>CDE_TYPE_ADJMT__c</errorDisplayField>
    <errorMessage>Adjustment Type cannot be &apos; Claim &apos;  with Case# entered.</errorMessage>
</ValidationRule>