CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/validationRules/Adjustment_Recover_Cancellation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Adjustment_Recover_Cancellation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(CDE_TYPE_ADJMT__c,&apos;2&apos;), 
        OR(
                        AND (
                                                    NOT(ISCHANGED(DTE_INIT_CANCEL__c)),
                                                                    ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;5&apos;)
                                                                ),
                                    AND (
                                                    NOT(ISCHANGED(DTE_CANCEL_ADJMT__c)),
                                                                    ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;6&apos;)
                                                                )
        )
    )</errorConditionFormula>
    <errorMessage>This record can not be updated due to cancellation.</errorMessage>
</ValidationRule>