CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/validationRules/CareEndDate_CareStartDate_SameMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>CareEndDate_CareStartDate_SameMonth</fullName>
    <active>true</active>
    <description>Both Care Start Date and Care End Date must be in same Month</description>
    <errorConditionFormula>AND(
OR(
    (YEAR(DTE_START_ADJMT__c)&lt;&gt;YEAR(DTE_END_ADJMT__c)),
    (MONTH(DTE_START_ADJMT__c)&lt;&gt;MONTH(DTE_END_ADJMT__c))
),
AND(ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;),
OR(ISPICKVAL(CDE_TYPE_ADJMT__c, &apos;1&apos;),ISPICKVAL(CDE_TYPE_ADJMT__c, &apos;3&apos;))) 
)</errorConditionFormula>
    <errorMessage>Both the Care Start Date and the Care End Date must be in the same month.</errorMessage>
</ValidationRule>