CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/validationRules/careEndDate_Grtrthan_careStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>careEndDate_Grtrthan_careStartDate</fullName>
    <active>true</active>
    <description>Care End Date must be greater than Care Begin Date</description>
    <errorConditionFormula>DTE_END_ADJMT__c &lt; DTE_START_ADJMT__c  &amp;&amp; ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;)</errorConditionFormula>
    <errorMessage>The Care End Date must be greater than the Care Begin Date</errorMessage>
</ValidationRule>