CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/validationRules/DTE_END_ADJMT_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DTE_END_ADJMT_Validation</fullName>
    <active>true</active>
    <description>Care End Date Cannot be in Future.</description>
    <errorConditionFormula>DTE_END_ADJMT__c &gt;  TODAY()  &amp;&amp; ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;)</errorConditionFormula>
    <errorDisplayField>DTE_END_ADJMT__c</errorDisplayField>
    <errorMessage>The Care End Date cannot be in the future.</errorMessage>
</ValidationRule>