CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/validationRules/DTE_Start_ADJMT_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DTE_Start_ADJMT_Validation</fullName>
    <active>true</active>
    <description>Care Start Date Cannot be in Future</description>
    <errorConditionFormula>DTE_START_ADJMT__c &gt; TODAY() &amp;&amp; ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;)</errorConditionFormula>
    <errorDisplayField>DTE_START_ADJMT__c</errorDisplayField>
    <errorMessage>The Care Start Date cannot be in the future.</errorMessage>
</ValidationRule>