CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/validationRules/either_case_or_provr_must_be_enteredNtbt.validationRule-meta.xml
<ValidationRule>
    <fullName>either_case_or_provr_must_be_enteredNtbt</fullName>
    <active>true</active>
    <description>CHAT-525: one of IDN_PROVR or IDN_CASE must be entered. Not both</description>
    <errorConditionFormula>AND(
NOT(OR(  ISBLANK(IDN_CASE__c),
      ISBLANK(IDN_PROVR__c) 
   )),
   ISPICKVAL(CDE_STATUS_ADJMT__c, &apos;1&apos;) 
)</errorConditionFormula>
    <errorMessage>Either Case or Provider must be entered. Not both.</errorMessage>
</ValidationRule>