CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/validationRules/OriginalDiscoveryDate_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>OriginalDiscoveryDate_Required</fullName>
    <active>true</active>
    <description>Project 353 | JIRA CCCAP-6051</description>
    <errorConditionFormula>AND(
 ISNULL(DTE_DISCV_ADJMT_ORIG__c),
 ISPICKVAL(CDE_TYPE_ADJMT__c, &quot;2&quot;),
 OR(
  ISNEW(),
  ISCHANGED( CDE_COUNTY__c ),
  ISCHANGED( IDN_CASE__c ),
  ISCHANGED( IDN_PROVR__c ),
  ISCHANGED( CDE_AGNST_ADJMT__c ),
  ISCHANGED( CDE_TYPE_ADJMT__c ),
  ISCHANGED( DTE_START_ADJMT__c ),
  ISCHANGED( DTE_END_ADJMT__c )
 )
)</errorConditionFormula>
    <errorDisplayField>DTE_DISCV_ADJMT_ORIG__c</errorDisplayField>
    <errorMessage>Field is required when Adjustment Type is Recovery</errorMessage>
</ValidationRule>