CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/validationRules/Provider_License_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_License_Closed</fullName>
    <active>false</active>
    <description>On Closed Provier Adjustment of type Claim can not be created</description>
    <errorConditionFormula>AND(  TEXT(CDE_TYPE_ADJMT__c) = &apos;1&apos;,NOT(ISPICKVAL( IDN_PROVR__r.CDE_STATUS_PROVR__c , &apos;Open&apos;)),OR((TEXT( CDE_STATUS_ADJMT__c ) = &apos;&apos;),(TEXT(CDE_STATUS_ADJMT__c) = &apos;1&apos;)) )</errorConditionFormula>
    <errorMessage>Adjustment cannot be created for the care dates when provider license status is closed</errorMessage>
</ValidationRule>