CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IDN_CASE__c</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CDE_REASON__c</columns>
    <columns>CDE_STATUS_ADJMT__c</columns>
    <columns>CDE_TYPE_ADJMT__c</columns>
    <columns>CDE_AGNST_ADJMT__c</columns>
    <columns>CDE_TYPE_CLSFN__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>