CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CDE_AGNST_ADJMT__c</columns>
    <columns>CDE_STATUS_ADJMT__c</columns>
    <columns>IDN_PROVR__c</columns>
    <columns>DTE_END_ADJMT__c</columns>
    <columns>AMT_ADJMT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_COUNTY__c</field>
        <operation>equals</operation>
        <value>Weld</value>
    </filters>
    <label>All</label>
</ListView>