CHATS_SIT/force-app/main/default/objects/T_ADJMT__c/listViews/Non_sub_adjustment_search.listView-meta.xml
<ListView>
    <fullName>Non_sub_adjustment_search</fullName>
    <columns>NAME</columns>
    <columns>IDN_PROVR__c</columns>
    <columns>CDE_TYPE_ADJMT__c</columns>
    <columns>CDE_STATUS_ADJMT__c</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>IND_REIMBSL_PMT__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>AMT_ADJMT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_TYPE_ADJMT__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CDE_AGNST_ADJMT__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018 12:00 AM</value>
    </filters>
    <label>Non sub adjustment search</label>
</ListView>